deployment/service-deployment-template.yml
apiVersion: v1
kind: Service
metadata:
  name: <service name>
  namespace: ml-app
spec:
  selector:
    app: <service name>
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <service name>
  namespace: ml-app
  labels:
    app: <service name>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <service name>
  template:
    metadata:
      labels:
        app: <service name>
    spec:
      containers:
      - name: <service name>
        image: acrmlbackend.azurecr.io/sidmlbackend:latest
        resources:
          limits:
            cpu: 2000m
            memory: 2048Mi
          requests:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
          - name: azure
            mountPath: /mnt/azure
        ports:
        - containerPort: 80
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 240
          httpGet:
            path: /
            port: 80
            scheme: HTTP
        startupProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 240
          httpGet:
            path: /
            port: 80
            scheme: HTTP
      serviceAccountName: sidmlbackend-function-keys-identity-svc-act
      volumes:
        - name: azure
          csi:
            driver: file.csi.azure.com
            volumeAttributes:
              secretName: azure-secret
              shareName: aksshare
              mountOptions: "dir_mode=0777,file_mode=0777,cache=strict,actimeo=30"
---
