deployment/k8_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sidmlbackend-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ml-aks-ingress.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: ml-aks-ingress.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /imputation/(.*)
        pathType: Prefix
        backend:
          service:
             name: sidmlbackend-http
             port:
                number: 80
      - path: /sampleapi/(.*)
        pathType: Prefix
        backend:
          service:
            name: sampleapi-http
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: sidmlbackend-http
            port:
              number: 80
---
