deployment/k8_keda.yml
apiVersion: v1
kind: Service
metadata:
  name: mlbackend-http
spec:
  selector:
    app: mlbackend-http
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlbackend-http
  labels:
    app: mlbackend-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlbackend-http
  template:
    metadata:
      labels:
        app: mlbackend-http
    spec:
      containers:
      - name: mlbackend-http
        image: mlbackendacr.azurecr.io/core:latest
        volumeMounts:
          - name: azure
            mountPath: /mnt/azure
        ports:
        - containerPort: 80
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 240
          httpGet:
            path: /
            port: 80
            scheme: HTTP
        startupProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 240
          httpGet:
            path: /
            port: 80
            scheme: HTTP

      serviceAccountName: mlbackend-function-keys-identity-svc-act
      volumes:
        - name: azure
          csi:
            driver: file.csi.azure.com
            volumeAttributes:
              secretName: azure-secret
              shareName: aksshare
              mountOptions: "dir_mode=0777,file_mode=0777,cache=strict,actimeo=30"
---
apiVersion: v1
kind: Service
metadata:
  name: timeseries-http
spec:
  selector:
    app: timeseries-http
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeseries-http
  labels:
    app: timeseries-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeseries-http
  template:
    metadata:
      labels:
        app: timeseries-http
    spec:
      containers:
      - name: timeseries-http
        image: mlbackendacr.azurecr.io/core:latest
        ports:
        - containerPort: 80
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 240
          httpGet:
            path: /
            port: 80
            scheme: HTTP
        startupProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 240
          httpGet:
            path: /
            port: 80
            scheme: HTTP

      serviceAccountName: mlbackend-function-keys-identity-svc-act
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlbackend-http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /imputation
        pathType: Prefix
        backend:
          service:
            name: mlbackend-http
            port:
              number: 80
      - path: /timeseries
        pathType: Prefix
        backend:
          service:
            name: timeseries-http
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
             name: mlbackend-http
             port:
                number: 80
---
